--- a/giftwise.html
+++ b/giftwise.html
@@ -3,56 +3,333 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GiftWise — Project</title>
+  <title>GiftWise — Smarter Gift Ideas</title>
+  <meta name="description" content="GiftWise helps you generate thoughtful gift ideas using recipient profiles, interests, and preferences." />
+
+  <style>
+    :root{
+      --bg:#0b0f14;
+      --card:#111826;
+      --muted:#9aa4b2;
+      --text:#e6edf3;
+      --accent:#7c5cff;
+      --accent2:#24c2a6;
+      --border:rgba(255,255,255,.08);
+      --shadow: 0 12px 40px rgba(0,0,0,.45);
+      --radius: 18px;
+      --max: 1080px;
+      --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      --sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+    }
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      font-family:var(--sans);
+      background: radial-gradient(1200px 600px at 20% 0%, rgba(124,92,255,.22), transparent 55%),
+                  radial-gradient(900px 500px at 80% 10%, rgba(36,194,166,.18), transparent 60%),
+                  var(--bg);
+      color:var(--text);
+      line-height:1.5;
+    }
+    a{ color:inherit; text-decoration:none; }
+    .wrap{ max-width:var(--max); margin:0 auto; padding:28px 18px 70px; }
+    header{
+      display:flex; align-items:center; justify-content:space-between;
+      gap:14px; padding:10px 0 22px;
+    }
+    .brand{
+      display:flex; align-items:center; gap:12px;
+      font-weight:700; letter-spacing:.2px;
+    }
+    .logo{
+      width:38px; height:38px; border-radius:12px;
+      background: linear-gradient(135deg, var(--accent), var(--accent2));
+      box-shadow: 0 10px 24px rgba(124,92,255,.18);
+      position:relative;
+    }
+    .logo:after{
+      content:""; position:absolute; inset:10px;
+      border-radius:10px; background: rgba(0,0,0,.25);
+      border:1px solid rgba(255,255,255,.12);
+    }
+    nav{ display:flex; gap:14px; align-items:center; flex-wrap:wrap; }
+    .pill{
+      padding:9px 12px; border:1px solid var(--border);
+      border-radius:999px; color:var(--muted);
+      background: rgba(255,255,255,.02);
+    }
+    .pill:hover{ border-color:rgba(255,255,255,.18); color:var(--text); }
+    .hero{
+      display:grid; grid-template-columns: 1.3fr .9fr;
+      gap:24px; align-items:stretch;
+      margin-top:6px;
+    }
+    @media (max-width: 900px){
+      .hero{ grid-template-columns:1fr; }
+    }
+    .card{
+      background: rgba(17,24,38,.78);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding:22px;
+      backdrop-filter: blur(10px);
+    }
+    h1{ margin:0 0 10px; font-size: clamp(28px, 4vw, 44px); line-height:1.12; }
+    .sub{ color:var(--muted); font-size: 16px; max-width: 58ch; }
+    .cta{ display:flex; gap:12px; flex-wrap:wrap; margin-top:16px; }
+    .btn{
+      display:inline-flex; align-items:center; gap:10px;
+      padding:11px 14px; border-radius: 12px;
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.04);
+      color:var(--text);
+      font-weight:600;
+    }
+    .btn strong{ font-family: var(--mono); font-size:12px; color: rgba(230,237,243,.9); }
+    .btn.primary{
+      background: linear-gradient(135deg, rgba(124,92,255,.95), rgba(36,194,166,.85));
+      border-color: rgba(255,255,255,.14);
+    }
+    .btn:hover{ transform: translateY(-1px); transition: .12s ease; }
+    .mini{
+      display:grid; grid-template-columns:1fr 1fr;
+      gap:12px;
+      margin-top:14px;
+    }
+    @media (max-width: 520px){ .mini{ grid-template-columns:1fr; } }
+
+    .kpi{
+      padding:14px; border-radius: 16px;
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.03);
+    }
+    .kpi .label{ color:var(--muted); font-size:12px; text-transform:uppercase; letter-spacing:.12em;}
+    .kpi .value{ font-size:18px; font-weight:800; margin-top:6px; }
+    .kpi .note{ color:var(--muted); font-size:12px; margin-top:6px; }
+
+    section{ margin-top: 18px; }
+    h2{ margin:0 0 10px; font-size: 18px; letter-spacing:.2px; }
+    .grid{
+      display:grid; grid-template-columns: repeat(3, 1fr);
+      gap:12px;
+    }
+    @media (max-width: 900px){ .grid{ grid-template-columns:1fr; } }
+
+    .feature{
+      padding:16px; border-radius: 16px;
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.03);
+      min-height:120px;
+    }
+    .feature h3{ margin:0 0 8px; font-size:15px; }
+    .feature p{ margin:0; color:var(--muted); font-size:14px; }
+    .tagrow{ display:flex; flex-wrap:wrap; gap:8px; margin-top:10px; }
+    .tag{
+      font-family:var(--mono);
+      font-size:12px;
+      color: rgba(230,237,243,.86);
+      background: rgba(255,255,255,.04);
+      border:1px solid var(--border);
+      padding:6px 10px;
+      border-radius:999px;
+    }
+    .how{
+      display:grid; grid-template-columns: 1fr 1fr;
+      gap:12px;
+    }
+    @media (max-width: 900px){ .how{ grid-template-columns:1fr; } }
+    ol{ margin:0; padding-left:18px; color:var(--muted); }
+    ol li{ margin:8px 0; }
+    code{
+      font-family: var(--mono);
+      font-size: 12.5px;
+      background: rgba(255,255,255,.05);
+      border:1px solid var(--border);
+      padding:2px 6px;
+      border-radius: 8px;
+      color: rgba(230,237,243,.9);
+    }
+    .footer{
+      margin-top:22px;
+      display:flex;
+      justify-content:space-between;
+      flex-wrap:wrap;
+      gap:10px;
+      color:var(--muted);
+      font-size:13px;
+    }
+    .muted{ color:var(--muted); }
+    .repo{
+      font-family:var(--mono);
+      font-size:12px;
+      word-break: break-all;
+    }
+  </style>
 </head>
+
 <body>
-  <header>
-    <h1>GiftWise</h1>
-    <p>Gift recommendation platform</p>
-    <p><a>Back to Projects</a></p>
-  </header>
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div>
+          <div style="font-size:14px; font-weight:800;">GiftWise</div>
+          <div class="muted" style="font-size:12px;">Smarter gift ideas, less stress.</div>
+        </div>
+      </div>
+      <nav>
+        <a class="pill" href="#features">Features</a>
+        <a class="pill" href="#how">How it works</a>
+        <a class="pill" href="#stack">Tech stack</a>
+        <a class="pill" href="#repo">Repo</a>
+      </nav>
+    </header>
 
-  <main>
-    <section>
-      <h2>Overview</h2>
-      <p>
-        GiftWise helps users choose better gifts faster by organizing recipient info (likes, dislikes,
-        interests) and generating suggestions based on that profile.
+    <div class="hero">
+      <div class="card">
+        <h1>Find thoughtful gifts in minutes.</h1>
+        <p class="sub">
+          GiftWise helps you generate personalized gift ideas using recipient profiles
+          (age, interests, dislikes, job, etc.), so you’re not stuck doomscrolling when a birthday
+          or holiday is coming up.
+        </p>
+
+        <div class="cta">
+          <!-- Replace # with your deployed URL or demo video if you have one -->
+          <a class="btn primary" href="#repo" title="Jump to the repository">
+            View the code <strong>↗</strong>
+          </a>
+          <a class="btn" href="https://github.com/hjmjohnsonSELT2025/giftwiseproject-selt_2025_team_04" target="_blank" rel="noreferrer">
+            GitHub Repo <strong>↗</strong>
+          </a>
+          <!-- Optional: add a video/demo link -->
+          <!-- <a class="btn" href="https://your-demo-link" target="_blank" rel="noreferrer">Demo <strong>↗</strong></a> -->
+        </div>
+
+        <div class="mini">
+          <div class="kpi">
+            <div class="label">Goal</div>
+            <div class="value">Personalized ideas</div>
+            <div class="note">Based on profile + preferences</div>
+          </div>
+          <div class="kpi">
+            <div class="label">Use case</div>
+            <div class="value">Holidays & birthdays</div>
+            <div class="note">Track recipients and avoid repeats</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <h2 style="margin-bottom:8px;">What GiftWise does</h2>
+        <div class="feature" style="min-height:auto;">
+          <h3>Recipient Profiles</h3>
+          <p>
+            Store key details like interests, dislikes, age, and job so gift suggestions match the person.
+          </p>
+        </div>
+
+        <div style="height:10px;"></div>
+
+        <div class="feature" style="min-height:auto;">
+          <h3>Track Recipients</h3>
+          <p>
+            Keep a list of people you buy gifts for and reduce repeat purchases across holidays and events.
+          </p>
+        </div>
+
+        <div style="height:10px;"></div>
+
+        <div class="feature" style="min-height:auto;">
+          <h3>Suggestion Engine</h3>
+          <p>
+            Generate gift ideas with filters and preferences, then refine quickly until it feels right.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <section id="features" class="card" style="margin-top:18px;">
+      <h2>Features</h2>
+      <div class="grid">
+        <div class="feature">
+          <h3>Login & Accounts</h3>
+          <p>Sign up, log in, and manage personal/recipient information securely.</p>
+        </div>
+        <div class="feature">
+          <h3>Preference-Based Suggestions</h3>
+          <p>Use interests + dislikes to guide gift ideas and keep recommendations relevant.</p>
+        </div>
+        <div class="feature">
+          <h3>Recipient Tracking</h3>
+          <p>Track gifts by person and event so you don’t repeat purchases accidentally.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="how" class="card">
+      <h2>How it works</h2>
+      <div class="how">
+        <div class="feature">
+          <h3>Workflow</h3>
+          <ol>
+            <li>Create an account and set up your profile.</li>
+            <li>Add recipients and their preferences.</li>
+            <li>Generate suggestions and refine based on feedback.</li>
+            <li>Save what you bought to avoid repeats later.</li>
+          </ol>
+        </div>
+        <div class="feature">
+          <h3>Quick Start (optional)</h3>
+          <p class="muted" style="margin:0 0 10px;">
+            Update these commands to match your actual setup instructions in the repo:
+          </p>
+          <p style="margin:0 0 8px;"><code>git clone https://github.com/hjmjohnsonSELT2025/giftwiseproject-selt_2025_team_04</code></p>
+          <p style="margin:0 0 8px;"><code>cd giftwiseproject-selt_2025_team_04</code></p>
+          <p style="margin:0;"><code>README.md → setup instructions</code></p>
+        </div>
+      </div>
+    </section>
+
+    <section id="stack" class="card">
+      <h2>Tech stack</h2>
+      <div class="tagrow">
+        <span class="tag">Ruby on Rails</span>
+        <span class="tag">PostgreSQL</span>
+        <span class="tag">HTML / CSS</span>
+        <span class="tag">OAuth</span>
+        <span class="tag">OpenAI API </span>
+      </div>
+      
+    </section>
+
+    <section id="repo" class="card">
+      <h2>Repository</h2>
+      <p class="muted" style="margin-top:0;">
+        Source code and setup instructions:
       </p>
+      <p class="repo">
+        <a href="https://github.com/hjmjohnsonSELT2025/giftwiseproject-selt_2025_team_04" target="_blank" rel="noreferrer">
+          https://github.com/hjmjohnsonSELT2025/giftwiseproject-selt_2025_team_04
+        </a>
+      </p>
+      <div class="cta" style="margin-top:12px;">
+        <a class="btn primary" href="https://github.com/hjmjohnsonSELT2025/giftwiseproject-selt_2025_team_04" target="_blank" rel="noreferrer">
+         https://github.com/hjmjohnsonSELT2025/giftwiseproject-selt_2025_team_04
+        </a>
+      
+      </div>
     </section>
 
-    <section>
-      <h2>Key Features</h2>
-      <ul>
-        <li>User accounts and profiles</li>
-        <li>Recipient tracking (even without accounts)</li>
-        <li>Saved gift suggestions + history</li>
-        <li>Preference updates over time</li>
-      </ul>
-    </section>
+    <div class="footer">
+      <div>© <span id="year"></span> GiftWise</div>
+      <div class="muted"> University of Iowa</div>
+    </div>
+  </div>
 
-    <section>
-      <h2>Tech (fill in later)</h2>
-      <ul>
-        <li>Frontend: </li>
-        <li>Backend: </li>
-        <li>Database: </li>
-        <li>Auth: OmniAuth </li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>My Role</h2>
-      <ul>
-        <li>Designed the flow from profile data to gift suggestions</li>
-        <li>Built UI for capturing and editing recipient info</li>
-        <li>Implemented data storage and retrieval logic</li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2026 Nicholas Wilcox</p>
-  </footer>
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
