--- a/giftwise.html
+++ b/giftwise.html
@@ -281,10 +281,8 @@
           </ol>
         </div>
         <div class="feature">
-          <h3>Quick Start (optional)</h3>
-          <p class="muted" style="margin:0 0 10px;">
-            Update these commands to match your actual setup instructions in the repo:
-          </p>
+          <h3>Quick Start</h3>
+          
           <p style="margin:0 0 8px;"><code>git clone https://github.com/hjmjohnsonSELT2025/giftwiseproject-selt_2025_team_04</code></p>
           <p style="margin:0 0 8px;"><code>cd giftwiseproject-selt_2025_team_04</code></p>
           <p style="margin:0;"><code>README.md → setup instructions</code></p>
