--- a/iowa-city-warm-project.html
+++ b/iowa-city-warm-project.html
@@ -53,8 +53,7 @@
 <body>
   <div class="container">
     <main class="content">
-      <!-- Put icwp.svg in the same folder as this HTML file -->
-      <img src="icwp.svg" alt="Iowa City Warm Project logo" />
+      <img src="/assets/svg/icwp.svg" alt="Iowa City Warm Project logo" />
 
       <h1>Iowa City Warm Project</h1>
 
