--- a/iowa-city-warm-project.html
+++ b/iowa-city-warm-project.html
@@ -25,7 +25,7 @@
       max-width:720px;
     }
     img{
-      width:120px;
+      width:100%;
       height:auto;
       margin-bottom:16px;
     }
