--- a/iowa-city-warm-project.html
+++ b/iowa-city-warm-project.html
@@ -9,7 +9,7 @@
     body{
       margin:0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      background:#ffffff;
+      background:#fa8729;
       color:#111111;
       line-height:1.6;
     }
@@ -40,11 +40,11 @@
     }
     .small{
       font-size:14px;
-      color:#444;
+      color:#222222;
       margin-top:16px;
     }
     .links a{
-      color:#111;
+      color:#111111;
       text-decoration:underline;
       margin:0 8px;
     }
