--- a/iowa-city-warm-project.html
+++ b/iowa-city-warm-project.html
@@ -55,15 +55,24 @@
     <main class="content">
       <img src="/assets/svg/icwp.svg" alt="Iowa City Warm Project logo" />
 
-      <h1>Iowa City Warm Project</h1>
-
-      <p><strong>Mission:</strong> Help Iowa City community members stay warm by collecting and distributing warm clothing to people in need.</p>
+      <p><strong>Mission</strong> Help Iowa City community members stay warm by collecting and distributing warm clothing to people in need.</p>
 
       <p><strong>Impact:</strong> We have helped <strong>100+</strong> people with coats, jackets, and winter essentials.</p>
 
       <p><strong>Founded by:</strong> Nicholas Wilcox</p>
 
      <p><strong>Donate:</strong>Contact Nicholas Wilcox at 712-223-4359 <strong></p>
+
+       <div class="box">
+        <p>
+          I started the Iowa City Warm Project because I saw a real need in my community.
+          1 in 4 people in Iowa City do not have their needs met in the winter. I myself, noticed how many people
+          were experiencing homelessness or struggling to get basic essentials. I wanted to help in a simple,
+          direct way: collect coats, jackets, and winter items and deliver them to the people who need them.
+          So far, I’ve organized collected over 100 items and distributed clothing directly to community members and through
+          local connections. My goal is to keep this local, respectful, and focused on real help when temperatures drop.
+          Let's keep Iowa City warm. :)         </p>
+      </div>
 
 
       <p class="small">© <span id="year"></span> Iowa City Warm Project</p>
