--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             Design-minded developer. I build clean, brand-consistent web experiences with strong
             typography, layout, and micro-interactions.
           </p>
+           <h1>Nicholas Wilcox</h1>
+        <p class="sub">
+          I like building data products where analysis actually changes decisions especially in sports, media, and consumer behavior.
+        </p>
+
+        <div class="pillrow">
+          <span class="pill">Sports Analytics</span>
+          <span class="pill">Data Engineering</span>
+          <span class="pill">SQL + Python</span>
+          <span class="pill">Storytelling w/ Numbers</span>
+          <span class="pill">Software Engineering</span>
+          <span class="pill">UI/UX Design</span>
+
+
+        </div>
 
           <a class="cta" href="#projects">Explore Projects</a>
         </div>
