--- a/index.html
+++ b/index.html
@@ -27,19 +27,15 @@
           </p>
 
           <p class="sub">
-            I like building data products where analysis actually changes decisions — especially in sports,
+            I like building data products where analysis actually changes decisions, especially in sports,
             media, and consumer behavior.
           </p>
 
-          <div class="pillrow">
-            <span class="pill">Sports Analytics</span>
-            <span class="pill">Data Engineering</span>
-            <span class="pill">SQL + Python</span>
-            <span class="pill">Storytelling w/ Numbers</span>
-            <span class="pill">Software Engineering</span>
-            <span class="pill">UI/UX Design</span>
-          </div>
-        </div>
+          <p class="sub">
+            Sports Analytics | Data Engineering | SQL | Python | Storytelling w/ Numbers | 
+            Software Engineering | UI/UX Design 
+          </p>
+        
 
         <div class="hero-right">
           <img
