--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           </p>
 
           <p class="sub">
-            Sports Analytics | Data Engineering | SQL | Python | Storytelling w/ Numbers | 
-            Software Engineering | UI/UX Design 
+            Sports Analytics | Data Engineering | SQL | Python | Storytelling w/ Numbers |
+            Software Engineering | UI/UX Design
           </p>
-        
+        </div>
 
         <div class="hero-right">
           <img
@@ -53,7 +53,6 @@
           combine behavior, constraints, and incentives to explain outcomes.
         </p>
       </section>
-
       <section id="projects">
         <h2>Projects</h2>
 
