--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </a>
 
         <a class="tile polyglot" href="./polyglot.html" aria-label="Polyglot recommendation system">
-          <img class="tile__img" src="./assets/svg/prec.svg" alt="Polyglot Recommendation System" />
+          <img class="tile__img" src="./assets/svg/precc.svg" alt="Polyglot Recommendation System" />
         </a>
         
         <a class="tile iowawarm" href="./iowa-city-warm-project.html" aria-label="Iowa City Warm Project">
