--- a/polyglot.html
+++ b/polyglot.html
@@ -68,7 +68,7 @@
 
       <hr />
 
-      <h2>Scoring idea (explainable)</h2>
+      <h2>Scoring idea </h2>
       <p>The recommender blends personalization with crowd wisdom:</p>
       <ul>
         <li><strong>Personalization:</strong> match recommendations to genres a user rates highly.</li>
